# KPI-Semester-1

./: .gitignore  README.md
C/: .testik.swp  validations.h
C/ASD/: ASD2.c  ASD3.c  ASD4.c  ASD5.c  ASD6  ASD6.c  ASD7  ASD7.c  ASD8  ASD8.c
C/IPI/: KP3.c  KP4.c  KP5  KP5.c  KP6  KP6.c  KP7  KP7.c  KP8  KP8.c  komppract2.c  test  test.c
C/IPI/KP9/: CMakeLists.txt  KP9  KP9.c  data  validations.h
C/Підготовка до екзамену/: test1  test1.c  test2.c
